# adventofcode

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/tasks/2019/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  17.py  18.py  2.py  20.py  22.py  24.py  25.py  3.py  5.py  6.py  7.py  _intcode_computer.py  _tools.py
src/tasks/2019/inputs/: 20r2.txt  20r2l.txt  20t2.txt  20t2l.txt
src/tasks/2022/: .flake8  .gitignore  .pre-commit-config.yaml  run-mypy
src/tasks/2022/tasks/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
src/tasks/2022/utils/: test_and_run.py
src/tasks/2023/inputs/1/: tst3
src/tasks/2023/tasks/: day1.py  day10.py  day10_provided.py  day11.py  day12.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/tasks/2024/: pyproject.toml
src/tasks/2024/tasks/: day10.py  day11.py  day11_2_research.py  day11_gpt.py  day12.py  day13.py  day14.py  day15.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/tasks/2024/utils/: test_and_run.py
src/tasks/year_2019/: 1.py  11.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  23.py  25.py  4.py  7.py  8.py  9.py
src/tasks/year_2019/inputs/: 20r2.txt  20r2l.txt
src/tasks/year_2022/tasks/: 1.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  3.py  4.py  9.py
src/tasks/year_2023/: 24.txt
src/tasks/year_2023/inputs/2/: tst2
src/tasks/year_2023/tasks/: day1.py  day10.py  day12.py  day17.py  day18.py  day19_provided.py  day2.py  day20.py  day21.py  day24.py  day3.py  day4.py  day5.py  day6.py  day9.py  tinfkoff_sample.py
src/tasks/year_2024/inputs/15/: tst
src/tasks/year_2024/tasks/: day1.py  day10.py  day12.py  day13.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day4.py  day6.py  day7.py  day8.py  day9.py  day_17_research.txt
src/tasks/year_2025/inputs/7/: tst
src/tasks/year_2025/tasks/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/utils/: directions.py  directions_orthogonal.py  helpers.py  input_formatters.py  logger.py  maze.py  numbers.py  pathfinding.py  position.py  position_search_problem.py  profiler.py  test_and_run.py
