[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Gorbachev <a.gorbachev@cryptology.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
tqdm = "^4.66.0"
numpy = "^2.0.0"
pulp = "^2.7.0"
networkx = "^3.2.1"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.4.0"
ruff = "^0.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203"]  # Black compatibility

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
