[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Gorbachev <a.gorbachev@cryptology.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
tqdm = "^4.66.0"
numpy = "^2.0.0"
pulp = "^2.7.0"
networkx = "^3.2.1"
matplotlib = "^3.6.2"
pytest = "^9.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.4.0"
ruff = "^0.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E203",  # Black compatibility
    "N999",  # Invalid module name (files like 1.py, 2.py are valid)
    "N802",  # Function name should be lowercase (camelCase compatibility)
    "N806",  # Variable should be lowercase (camelCase compatibility)
    "N803",  # Argument name should be lowercase (camelCase compatibility)
    "N816",  # Variable in global scope should not be mixedCase
    "N818",  # Exception name should be named with Error suffix
    "N801",  # Class name should use CapWords convention
    "E501",  # Line too long (mostly in comments/docstrings)
    "E731",  # Do not assign lambda (sometimes useful)
    "E722",  # Do not use bare except (legacy code)
    "E741",  # Ambiguous variable name (l, O, I - sometimes acceptable)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
